style(navbar): Add background-color to .navbar and z-index to .navbar-fixed
Background color of navbar becomes transparent upon scrolling down so a white background color was added to .navbar.

--- a/html-css/15-portfolio/css/styles.css
+++ b/html-css/15-portfolio/css/styles.css
@@ -170,12 +170,14 @@ Navbar
   align-items: center;
   height: 5rem;
   padding-inline: 1rem;
+  background-color: var(--clr-white);
   box-shadow: var(--dark-shadow);
 }
 
 .navbar-fixed {
   position: sticky;
   top: 0;
+  z-index: 10;
 }
 
 .navbar__logo {
